Fix distortion of actor portraits in compendium search results

--- a/src/styles/ui/sidebar/_compendium-directory.scss
+++ b/src/styles/ui/sidebar/_compendium-directory.scss
@@ -39,8 +39,10 @@ section.compendium-sidebar {
                 img {
                     border: none;
                     height: 36px;
-                    width: 36px;
+                    object-fit: cover;
+                    object-position: 50% 0;
                     padding: 2px 0;
+                    width: 36px;
                 }
             }
 
